[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/faves/dock/themes/theme1.tres" type="Theme" id=1]
[ext_resource path="res://addons/faves/dock/task.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.0784314 )
border_color = Color( 1, 1, 1, 0.0980392 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false
border_color = Color( 1, 1, 1, 0.0980392 )

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 212, 212, 212, 0, 222, 222, 222, 0, 221, 221, 221, 77, 223, 223, 223, 138, 223, 223, 223, 178, 223, 223, 223, 178, 223, 223, 223, 138, 221, 221, 221, 77, 222, 222, 222, 0, 212, 212, 212, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 212, 212, 212, 0, 212, 212, 212, 18, 223, 223, 223, 145, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 223, 223, 223, 145, 212, 212, 212, 18, 212, 212, 212, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 145, 222, 222, 222, 199, 222, 222, 222, 199, 221, 221, 221, 54, 220, 220, 220, 44, 222, 222, 222, 181, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 223, 223, 223, 145, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 74, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 219, 219, 219, 43, 221, 221, 221, 0, 223, 223, 223, 32, 222, 222, 222, 181, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 223, 223, 223, 74, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 136, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 181, 223, 223, 223, 32, 221, 221, 221, 0, 216, 216, 216, 33, 222, 222, 222, 181, 222, 222, 222, 199, 222, 222, 222, 199, 223, 223, 223, 136, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 175, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 223, 223, 223, 180, 223, 223, 223, 32, 219, 219, 219, 0, 220, 220, 220, 44, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 175, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 179, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 181, 223, 223, 223, 32, 221, 221, 221, 0, 219, 219, 219, 43, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 175, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 140, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 181, 223, 223, 223, 32, 223, 223, 223, 0, 223, 223, 223, 32, 222, 222, 222, 181, 222, 222, 222, 199, 222, 222, 222, 199, 223, 223, 223, 139, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 221, 221, 221, 76, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 220, 220, 220, 44, 221, 221, 221, 0, 223, 223, 223, 32, 223, 223, 223, 180, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 221, 221, 221, 75, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 223, 223, 223, 145, 222, 222, 222, 199, 222, 222, 222, 199, 221, 221, 221, 54, 218, 218, 218, 42, 223, 223, 223, 180, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 223, 223, 223, 145, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 214, 214, 214, 0, 214, 214, 214, 19, 223, 223, 223, 145, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 222, 222, 222, 199, 223, 223, 223, 145, 212, 212, 212, 18, 212, 212, 212, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 214, 214, 214, 0, 222, 222, 222, 0, 222, 222, 222, 78, 223, 223, 223, 138, 223, 223, 223, 178, 223, 223, 223, 178, 223, 223, 223, 138, 222, 222, 222, 78, 222, 222, 222, 0, 212, 212, 212, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=5]
flags = 0
flags = 0
image = SubResource( 6 )
size = Vector2( 16, 16 )

[node name="Task" type="HBoxContainer" groups=["faves_dock_refs"]]
margin_top = 54.0
margin_right = 263.0
margin_bottom = 80.0
script = ExtResource( 2 )

[node name="Icon" type="TextureRect" parent="."]
visible = false
margin_left = 16.0
margin_right = 16.0
margin_bottom = 26.0
stretch_mode = 4

[node name="Done" type="Button" parent="."]
visible = false
margin_right = 12.0
margin_bottom = 26.0
theme = ExtResource( 1 )

[node name="Check" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 26.0
mouse_filter = 1

[node name="Label" type="LineEdit" parent="."]
margin_left = 28.0
margin_right = 263.0
margin_bottom = 26.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )
placeholder_text = "Task"

[node name="Line" type="Button" parent="."]
visible = false
margin_left = 235.0
margin_right = 263.0
margin_bottom = 28.0
theme = ExtResource( 1 )
icon = SubResource( 5 )

[connection signal="toggled" from="Check" to="." method="_on_Check_toggled"]
[connection signal="focus_exited" from="Label" to="." method="_on_Label_focus_exited"]
[connection signal="text_changed" from="Label" to="." method="_on_Label_text_changed"]
